# evobook

./: .gitignore  LICENSE  README.md  restart.ps1  start.sh
backend/: .env.example  .gitignore  .implementation_summary.txt  ACTIVE_COURSE_IMPLEMENTATION.md  ACTIVITY_HEATMAP_IMPLEMENTATION.md  BACKGROUND_GENERATION_TEST.md  COURSE_PERSISTENCE_FIX.md  DISCOVERY_IMPLEMENTATION.md  FINAL_CHECKLIST.md  GAME_CURRENCY_IMPLEMENTATION.md  HARDCODE_REFACTOR_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  INVITE_SYSTEM_IMPLEMENTATION.md  KNOWLEDGE_TREE_NAVIGATION_FIX.md  LEARNING_TIME_TRACKING_IMPLEMENTATION.md  LOCALSTORAGE_CLEANUP_COMPLETE.md  PROFILE_STATS_IMPLEMENTATION.md  PROFILE_STATS_VERIFICATION.md  RECOVERY_IMPLEMENTATION.md  REWARD_MULTIPLIER_IMPLEMENTATION.md  SHOP_INVENTORY_IMPLEMENTATION.md  SMART_ROUTING_FIX.md  TESTING_GUIDE.md  alembic.ini  pyproject.toml
backend/.cursor/rules/: architecture.mdc  error-handling.mdc  evobook-backend.mdc  general.mdc  project-setup.mdc  python-standards.mdc
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: routes.py
backend/docs/: api-contract.md  db-schema.md  game_currency_api_implementation.md  game_currency_quick_start.md  prompt-pack.md  quiz-answer-validation.md  runbook-local.md
backend/scripts/: admin_topup.py  check_quiz_missing_answers.py  check_stuck_nodes.sh  dev.sh  e2e_run.py  fix_duplicate_node_contents.sh  fix_mode_column.sql  quick_test_game_api.sh  quiz_tools.bat  quiz_tools.sh  seed_discovery_courses.py  seed_shop_items.py  start.sh  test_active_course.sh  test_course_persistence.sh  test_game_api.sh  test_game_currency_api.sh  test_heartbeat.sh  test_invite_system.sh  test_llm.py  test_profile_stats.sh  test_quiz_answer_validation.py  test_quiz_apis.sh  test_quiz_deduplication.py  test_recovery.sh  test_shop_api.sh  update_route_prefixes.py
backend/tests/: conftest.py  test_course_map.py  test_database.py  test_error_handling.py  test_health.py  test_llm_client.py  test_node_content.py  test_onboarding.py  test_prompt_registry.py  test_quiz.py
backend/tools/: devserver-toggle-0.0.1.vsix
(+204 files in other folders)
